<resources>
    <!-- Other string resources-->

    <string name="app_name">Github User</string>
    <string name="Language">Ganti Bahasa</string>
    <string name="menu_1">menu1</string>

    <string name="API">76355315c772623c18f41a7631303940d06f26a6</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_activity">this activity</string>
    <string name="this_fragment">this fragment</string>
    <string name="search">Search</string>
    <string name="search_hint">Masukkan Username</string>
    <string name="not_found">User Tidak Ditemukan!</string>
    <string name="followers">Pengikut</string>
    <string name="repository">Repositori</string>
    <string name="following">Mengikuti</string>
    <string name="start">Cari Username Untuk Memulai!</string>
    <string name="alarm_message">Pesan Alarm</string>
    <string name="set_waktu">Set Waktu</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="batalkan_alarm">Batalkan Alarm</string>
    <string name="add_fav">Menambahkan %s ke Favorit</string>
    <string name="remove_fav">Menghapus %s dari Favorit</string>

</resources>


