<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".AlarmActivity">

    <ImageButton
        android:id="@+id/btn_time"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="93dp"
        android:layout_marginBottom="13dp"
        android:src="@drawable/time"
        app:layout_constraintBottom_toTopOf="@+id/edt_message"
        app:layout_constraintEnd_toStartOf="@+id/tv_time"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="105dp"
        android:text="@string/set_waktu"
        app:layout_constraintStart_toEndOf="@+id/btn_time"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_message"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="19dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/alarm_message"
        android:inputType="text"
        android:textColorHint="#ACACAC"
        app:layout_constraintBottom_toTopOf="@+id/btn_set_alarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_time" />

    <Button
        android:id="@+id/btn_set_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="10dp"
        android:text="@string/set_alarm"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_message" />

    <Button
        android:id="@+id/btn_cancel_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/batalkan_alarm"
        android:textColor="#000"
        app:layout_constraintStart_toEndOf="@+id/btn_set_alarm"
        app:layout_constraintTop_toBottomOf="@+id/edt_message" />


</androidx.constraintlayout.widget.ConstraintLayout>