<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#282C2B"
    android:scrollbars="none"
    tools:context=".DetailActivity"
    tools:ignore="Overdraw">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#035DA3"
        android:padding="10dp">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#03A9F4"
            app:cardCornerRadius="30dp"
            tools:ignore="MissingConstraints,RtlSymmetry">

            <ImageButton
                android:id="@+id/favButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/fav0"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="right"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/tv_img"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="-80dp"
                android:scaleType="centerCrop"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="215dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_item_username"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="260dp"
                android:layout_marginEnd="100dp"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="240dp"
                android:gravity="center"
                android:text="||"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/tv_item_location"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="260dp"
                android:gravity="center" />

            <TextView
                android:id="@+id/tv_item_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="290dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="320dp"
                android:layout_marginBottom="10dp"
                android:gravity="left"
                android:paddingLeft="30dp"
                android:text="@string/followers"
                android:textSize="15sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="320dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/repository"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="320dp"
                android:layout_marginBottom="10dp"
                android:gravity="right"
                android:paddingRight="30dp"
                android:text="@string/following"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_item_followers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="350dp"
                android:layout_marginBottom="10dp"
                android:gravity="left"
                android:paddingLeft="30dp"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_item_repository"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="180dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textSize="25sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_item_following"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="350dp"
                android:layout_marginBottom="10dp"
                android:gravity="right"
                android:paddingRight="30dp"
                android:textSize="25sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#03A9F4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progressBar"
            app:tabIndicatorHeight="0dp"
            app:tabSelectedTextColor="#fff"
            app:tabTextColor="#000000" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabs" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


